try to run unit test with Java 9